RESOLVED FIXED182312
JSExports.h should be included as <JavaScriptCore/JSExportMacros.h>
https://bugs.webkit.org/show_bug.cgi?id=182312
Summary JSExports.h should be included as <JavaScriptCore/JSExportMacros.h>
Don Olmstead
Reported 2018-01-30 14:52:11 PST
Currently in some places JSExports.h is being included incorrectly as <runtime/JSExports.h>
Attachments
Patch (10.98 KB, patch)
2018-01-30 14:59 PST, Don Olmstead
no flags
Patch (7.24 KB, patch)
2018-01-30 15:03 PST, Don Olmstead
no flags
Patch (6.12 KB, patch)
2018-01-30 15:31 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2018-01-30 14:59:17 PST
EWS Watchlist
Comment 2 2018-01-30 15:01:15 PST
Attachment 332711 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Don Olmstead
Comment 3 2018-01-30 15:03:03 PST
Created attachment 332712 [details] Patch Fix changelog
Don Olmstead
Comment 4 2018-01-30 15:31:40 PST
Created attachment 332714 [details] Patch Leave gtest alone for the moment
Michael Catanzaro
Comment 5 2018-01-30 16:27:52 PST
Comment on attachment 332714 [details] Patch That's really weird; I wonder why it was done this way....
Don Olmstead
Comment 6 2018-01-30 16:30:48 PST
(In reply to Michael Catanzaro from comment #5) > Comment on attachment 332714 [details] > Patch > > That's really weird; I wonder why it was done this way.... Yea no clue but doesn't seem to be needed
WebKit Commit Bot
Comment 7 2018-01-30 16:53:52 PST
Comment on attachment 332714 [details] Patch Clearing flags on attachment: 332714 Committed r227866: <https://trac.webkit.org/changeset/227866>
WebKit Commit Bot
Comment 8 2018-01-30 16:53:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-01-30 17:02:23 PST
Fujii Hironori
Comment 10 2018-01-30 17:39:53 PST
(In reply to Michael Catanzaro from comment #5) > That's really weird; I wonder why it was done this way.... This is not so weird. This is the reason why Source/WebCore/ForwardingHeaders/runtime/JSExportMacros.h exists. A lot of headers are included in this style. This is the reason why Source/WebCore/ForwardingHeaders exists.
Michael Catanzaro
Comment 11 2018-01-31 08:14:45 PST
I don't understand... I never noticed Source/WebCore/ForwardingHeaders before... why does it exist...?
Konstantin Tokarev
Comment 12 2018-01-31 08:19:22 PST
Seems like it's used by Mac and Win only
Don Olmstead
Comment 13 2018-01-31 11:10:29 PST
(In reply to Michael Catanzaro from comment #11) > I don't understand... I never noticed Source/WebCore/ForwardingHeaders > before... why does it exist...? Definitely need to figure it out so https://bugs.webkit.org/show_bug.cgi?id=182303 can proceed. Actually found this issue while doing that and now there are more compilation errors because of <heap|runtime|etc/> style includes.
Alex Christensen
Comment 14 2018-01-31 11:11:51 PST
(In reply to Michael Catanzaro from comment #11) > I don't understand... I never noticed Source/WebCore/ForwardingHeaders > before... why does it exist...? I don't think there's a good reason why it exists.
Don Olmstead
Comment 15 2018-01-31 11:22:08 PST
(In reply to Alex Christensen from comment #14) > (In reply to Michael Catanzaro from comment #11) > > I don't understand... I never noticed Source/WebCore/ForwardingHeaders > > before... why does it exist...? > > I don't think there's a good reason why it exists. Is the same true for the ForwardingHeaders directory within JavaScriptCore? I can make patches removing them all.
Michael Catanzaro
Comment 16 2018-01-31 13:27:49 PST
IMO if nobody knows why they exist, we should remove them. In doing so, we'll either find the answer in some problem, or everything will be fine and it will remain a mystery.
Don Olmstead
Comment 17 2018-01-31 13:51:52 PST
(In reply to Michael Catanzaro from comment #16) > IMO if nobody knows why they exist, we should remove them. > > In doing so, we'll either find the answer in some problem, or everything > will be fine and it will remain a mystery. Yea I forked that particular issue into https://bugs.webkit.org/show_bug.cgi?id=182347. I don't think it'll work properly until this https://bugs.webkit.org/show_bug.cgi?id=182303 lands.
Note You need to log in before you can comment on or make changes to this bug.