Source/WebKitLegacy/mac/WebKitPrefix.h
@@ -83,10 +83,10 @@ typedef float CGFloat;
 #endif
 #endif
 
+#include <JavaScriptCore/JSExportMacros.h>
+#include <WebCore/PlatformExportMacros.h>
 #include <pal/ExportMacros.h>
 #include <wtf/ExportMacros.h>
-#include <runtime/JSExportMacros.h>
-#include <WebCore/PlatformExportMacros.h>
 
 /* Work around bug with C++ library that screws up Objective-C++ when exception support is disabled. */
 #undef try
